--- a/01.01-vim_normal.ipynb
+++ b/01.01-vim_normal.ipynb
@@ -141,31 +141,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 47,
    "id": "50fbb18d-67d4-4ec5-abb3-e24b44496961",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Select this cell ...\n",
     "\n",
-    "first = True;"
+    "first = True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 26,
    "id": "677de64a-a0ed-427c-9c59-29a7934b9d92",
    "metadata": {},
    "outputs": [],
    "source": [
     "# ... and this cell ...\n",
     "\n",
-    "second = True;"
+    "second = True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 27,
    "id": "0d5c2b58-8c1b-456c-a9fc-376e4add7cd3",
    "metadata": {},
    "outputs": [
@@ -195,9 +195,9 @@
     "\n",
     "Keystrokes | Effects\n",
     ":---:|---\n",
-    "<kbd>Ctrl</kbd> + <kbd>O</kbd> + <kbd>G</kbd> | Select the first cell in the Jupyter Notebook\n",
-    "<kbd>Ctrl</kbd> + <kbd>O</kbd> + <kbd>Ctrl</kbd> + <kbd>G</kbd> | Select the last cell in the Jupyter Notebook\n",
-    "<kbd>Ctrl</kbd> + <kbd>O</kbd> + <kbd>Z</kbd> + <kbd>Z</kbd> | Center the selected cell on the screen\n",
+    "<kbd>Ctrl</kbd> + <kbd>O</kbd> , <kbd>G</kbd> | Select the first cell in the Jupyter Notebook\n",
+    "<kbd>Ctrl</kbd> + <kbd>O</kbd> , <kbd>Ctrl</kbd> + <kbd>G</kbd> | Select the last cell in the Jupyter Notebook\n",
+    "<kbd>Ctrl</kbd> + <kbd>O</kbd> , <kbd>Z</kbd> + <kbd>Z</kbd> | Center the selected cell on the screen\n",
     "\n",
     "Using these keystrokes, move to the top of this notebook and move to the bottom of this notebook. When at the last cell of the notebook, center it on the screen. When you are done, move onto exercise 4."
    ]
@@ -215,13 +215,14 @@
     ":---:|---\n",
     "<kbd>Ctrl</kbd> + <kbd>Y</kbd> | Move the current cell up\n",
     "<kbd>Ctrl</kbd> + <kbd>E</kbd> | Move the current cell down\n",
+    "<kbd>Ctrl</kbd> + <kbd>O</kbd> , <kbd>U</kbd> | Undo a cell action\n",
     "\n",
     "Using these keystrokes as well as those for selecting adjacent cells, move the cells below into the order listed by the cells in order to complete the exercise."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 31,
    "id": "593f6dd6-3400-448a-86ed-a398b00d1f7b",
    "metadata": {
     "tags": []
@@ -236,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "bce56124-631f-419e-abf6-655c435a98a0",
    "metadata": {
     "tags": []
@@ -251,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 30,
    "id": "05d60bba-d58a-42b9-8f69-f31d1730ab97",
    "metadata": {
     "tags": []
@@ -261,12 +262,12 @@
     "# This cell needs to be run third\n",
     "\n",
     "if second == True:\n",
-    "    third == True"
+    "    third = True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 32,
    "id": "6125135a-ef95-4877-b3aa-9f8a3e9479b3",
    "metadata": {
     "tags": []
@@ -276,12 +277,12 @@
     "# This cell needs to be run fifth\n",
     "\n",
     "if fourth == True:\n",
-    "    fifth == True"
+    "    fifth = True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 28,
    "id": "b570ff31-ae07-4968-8761-73fe7eb9cb1f",
    "metadata": {
     "tags": []
@@ -295,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 33,
    "id": "5a2219a5-246f-4ee4-95cd-86ee4f7ea3e7",
    "metadata": {
     "tags": []
@@ -305,7 +306,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Not quite :(\n"
+      "Hooray!\n"
      ]
     }
    ],
@@ -329,35 +330,11 @@
     "\n",
     "Keystrokes | Effects\n",
     ":---:|---\n",
-    "<kbd>Ctrl</kbd> + <kbd>O</kbd> + <kbd>Ctrl</kbd> + <kbd>O</kbd> | Insert a cell above\n",
-    "<kbd>Ctrl</kbd> + <kbd>O</kbd> + <kbd>O</kbd> | Insert a cell below\n",
+    "<kbd>Ctrl</kbd> + <kbd>O</kbd> , <kbd>Ctrl</kbd> + <kbd>O</kbd> | Insert a cell above\n",
+    "<kbd>Ctrl</kbd> + <kbd>O</kbd> , <kbd>O</kbd> | Insert a cell below\n",
     "\n",
     "Using these shortcuts, add three empty cells above and below the cell marked for this exercise. Once you're done, *save this notebook* and run the code block labeled as the verifier to check that you have the right number of cells."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ca72c1ac-6e09-4f09-9fcc-20625f51aa87",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e6f1b21c-8049-4c7b-91ee-3184ab81baf1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "64d72681-d573-495a-88ab-a19fc9a9d1e1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -368,30 +345,6 @@
    "source": [
     "# Please insert some cells above me and below me!"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d1e12f92-dc5c-4e69-818c-59e3bf876ea0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9dcf6596-71d3-4980-b0c9-87f16701d595",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b122c552-6160-49b0-a87b-b5733bf3ff20",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -455,23 +408,23 @@
     "\n",
     "Keystrokes | Effects\n",
     ":---:|---\n",
-    "<kbd>Ctrl</kbd> + <kbd>O</kbd> + <kbd>Y</kbd> | Copy or 'yank' the currently selected cell onto your system clipboard\n",
-    "<kbd>Ctrl</kbd> + <kbd>O</kbd> + <kbd>D</kbd> | Cut or 'delete' the currently selected cell onto your system clipboard\n",
-    "<kbd>Ctrl</kbd> + <kbd>O</kbd> + <kbd>P</kbd> | Paste a cell from your system clipboard below the currently selected cell\n",
+    "<kbd>Ctrl</kbd> + <kbd>O</kbd> , <kbd>Y</kbd> | Copy or 'yank' the currently selected cell onto your system clipboard\n",
+    "<kbd>Ctrl</kbd> + <kbd>O</kbd> , <kbd>D</kbd> | Cut or 'delete' the currently selected cell onto your system clipboard\n",
+    "<kbd>Ctrl</kbd> + <kbd>O</kbd> , <kbd>P</kbd> | Paste a cell from your system clipboard below the currently selected cell\n",
     "\n",
     "There are several simple tasks for this exercise. While navigating around with Vim shortcuts, remove cells that tell you to remove them and place them where they're needed, copy the cells that you're instructed to copy and paste them as many times as you're told to paste them. Afterwards, select all the cells for the exercise and run them to complete the exercise"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 34,
    "id": "958d8dac-fedf-4c15-bda6-09a77ee4d8bd",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "# This cell should run only once\n",
+    "# This cell should run first and only once\n",
     "\n",
     "x = 0\n",
     "first = True\n",
@@ -482,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 38,
    "id": "1ec81e11-e26f-47ac-b3ab-de065d1f7fed",
    "metadata": {
     "tags": []
@@ -496,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 40,
    "id": "df9ad056-d405-480d-804d-89c557f2dc91",
    "metadata": {
     "tags": []
@@ -506,12 +459,12 @@
     "# This cell needs to be run second\n",
     "\n",
     "if first == True:\n",
-    "    second == True"
+    "    second = True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 42,
    "id": "7c9efb8c-e70f-4919-82fc-74f6ebc77db3",
    "metadata": {
     "tags": []
@@ -526,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 41,
    "id": "09985289-11c9-4db3-9e17-a578d31ba855",
    "metadata": {
     "tags": []
@@ -536,12 +489,12 @@
     "# This cell needs to be run third\n",
     "\n",
     "if second == True:\n",
-    "    third == True"
+    "    third = True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 43,
    "id": "512c50a5-3676-48df-833f-8b7bf8601f0f",
    "metadata": {
     "tags": []
@@ -556,10 +509,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "6400b409-2f54-428c-b34f-1a1338cc9508",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hooray!\n"
+     ]
+    }
+   ],
    "source": [
     "# This is the verification cell\n",
     "\n",
@@ -572,7 +533,7 @@
    "id": "105f16bc-aa7c-459c-bd17-11e689ed67e8",
    "metadata": {},
    "source": [
-    "## 7) Go over the various ways that you can turn cells into markdown, code, or raw\n",
+    "## 7) Changing cells into markdown, code, or raw\n",
     "\n",
     "When editing a notebook, it can be nice to quickly switch between a cell being in Markdown, Code, or even Raw mode. For that purpose, you can use the following:\n",
     "\n",
@@ -587,7 +548,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28a35a56-fbd5-4991-abc3-3b85dd692af9",
+   "id": "7579fc1b-84df-4eeb-9c61-4e063725ad41",
    "metadata": {},
    "source": [
     "##### I want to be turned into a raw cell, please!!!"
@@ -596,7 +557,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ce8e547-6b7f-4b75-8932-d125f14d4a53",
+   "id": "88d71c7d-6263-4b23-9fd3-abdf853af1dd",
    "metadata": {
     "tags": []
    },
@@ -607,7 +568,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "bfb88040-8ea8-481a-934e-ae493d57e73a",
+   "id": "3ef919db-3778-4c06-a0e1-9f21d81324e2",
    "metadata": {},
    "source": [
     "# I wish I could be a code cell some day..."
@@ -615,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 46,
    "id": "4bb76784-de2d-49ed-9528-587ba93518e2",
    "metadata": {
     "tags": []
@@ -625,9 +586,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n",
-      "True\n",
-      "True\n",
       "Hooray!\n"
      ]
     }
@@ -687,27 +645,28 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "bc960352-2796-420f-ab78-ae23a9dade65",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "003a594c-5ab1-4130-b3fd-e5c94ccf878c",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "This one is already essentially explained by the code below. The best way to handle it is probably just a couple of code splits and deletions. It is also possible to merge selected cells together using shift m. Maybe have an incomplete python function call that is completed after merging two cells? This is possible without even removing the extra space left in a merge."
+    "# This cell needs to be merged with the cell below to complete mergeChecker\n",
+    "def mergeChecker():"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec7cd744-1ce3-426a-8e02-53005a0aeb9a",
+   "id": "7517a2ba-873e-45e1-97a6-37077a239b68",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# This cell needs to be merged with the cell below to complete mergeChecker\n",
-    "def mergeChecker():\n",
-    "\n",
     "    return True\n",
     "\n",
     "split = True\n",
-    "# SPLIT HERE >#"
+    "# SPLIT HERE ># #< SPLIT HERE #\n",
+    "split = False"
    ]
   },
   {
