--- a/01.02-vim_jupyter.ipynb
+++ b/01.02-vim_jupyter.ipynb
@@ -7,7 +7,7 @@
     "tags": []
    },
    "source": [
-    "# Switching into Jupyter Command mode (copying relevant normal exercises) (6 exercises to go)"
+    "# Switching into Jupyter Command mode"
    ]
   },
   {
@@ -17,7 +17,7 @@
     "tags": []
    },
    "source": [
-    "Now that you have learned how to use Vim's normal mode for cell manipulation, we can work on manipulating cells with Vim keybindings in Jupyter command mode. To enter Jupyter Command mode, you can use <kbd>Shift</kbd> + <kbd>Esc</kbd> from Jupyter insert mode. To return to Jupyter Insert mode from Jupyter command mode, just press <kbd>Enter</kbd> while selecting a cell.\n",
+    "Now that you have learned how to use Vim's normal mode for cell manipulation, we can work on manipulating cells with Vim keybindings in Jupyter command mode. To enter Jupyter command mode, you can use <kbd>Shift</kbd> + <kbd>Esc</kbd> from Jupyter insert mode. To return to Jupyter insert mode from Jupyter command mode, just press <kbd>Enter</kbd> while selecting a cell.\n",
     "\n",
     "In Jupyter command, it is possible to, for the most part, take the normal keybindings from Vim and apply them to Jupyter command mode when interacting with cells. Thinking of cells as lines to interact with will help you make full use of Jupyter command mode."
    ]
@@ -29,7 +29,7 @@
    "source": [
     "## 9) Selecting adjacent cells in Jupyter Command\n",
     "\n",
-    "This exercise, much like exercise 1, shows you how to select nearby cells from the one you are currently selecting. This time, you will be in Jupyter Command mode for it. These are the shortcuts:\n",
+    "This exercise, much like exercise 1, shows you how to select nearby cells from the one you are currently selecting. This time, you will be in Jupyter command mode for it. These are the shortcuts:\n",
     "\n",
     "Keystrokes | Effects\n",
     ":---:|---\n",
@@ -41,21 +41,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "50a7fb3e-217e-41ac-86b2-3ee81841ffc7",
-   "metadata": {},
+   "execution_count": 9,
+   "id": "23e7106e-5951-4fd3-99f6-89e189a077ea",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# This cell needs to be run second\n",
     "\n",
     "if first == True:\n",
-    "    second == True"
+    "    second = True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "ad2dbd4b-27ea-44f9-ace0-d4a8231fffeb",
+   "execution_count": 15,
+   "id": "af23b29e-7a11-4f30-be4e-e883b50e4fe5",
    "metadata": {
     "tags": []
    },
@@ -69,8 +71,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "7664b8d5-9c83-41ec-8414-1d28812d83ab",
+   "execution_count": 11,
+   "id": "bfdefabf-92f0-4f29-a02c-d6dd5107d379",
    "metadata": {
     "tags": []
    },
@@ -79,13 +81,13 @@
     "# This cell needs to be run third\n",
     "\n",
     "if second == True:\n",
-    "    third == True"
+    "    third = True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "234b4850-34b5-4ce2-9f2c-b61d6a65be08",
+   "execution_count": 19,
+   "id": "000468d9-8199-49ec-bb75-bf9de69e1f9a",
    "metadata": {
     "tags": []
    },
@@ -94,13 +96,13 @@
     "# This cell needs to be run fifth\n",
     "\n",
     "if fourth == True:\n",
-    "    fifth == True"
+    "    fifth = True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "5fa21890-ed99-4d91-a066-02f3c2a2b93f",
+   "execution_count": 6,
+   "id": "a92dd894-8eb4-4a64-a311-8975887dc10d",
    "metadata": {
     "tags": []
    },
@@ -117,8 +119,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "694134b1-af44-44d1-bb88-421cb3b8d16d",
+   "execution_count": 21,
+   "id": "a765ca61-aa7a-4e5b-9c2e-d056190aa481",
    "metadata": {
     "tags": []
    },
@@ -127,7 +129,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Not quite :(\n"
+      "Hooray!\n"
      ]
     }
    ],
@@ -159,34 +161,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "id": "50fbb18d-67d4-4ec5-abb3-e24b44496961",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Select this cell ...\n",
     "\n",
-    "first == True;"
+    "first = True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "id": "677de64a-a0ed-427c-9c59-29a7934b9d92",
    "metadata": {},
    "outputs": [],
    "source": [
     "# ... and this cell ...\n",
     "\n",
-    "second == True;"
+    "second = True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "id": "0d5c2b58-8c1b-456c-a9fc-376e4add7cd3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hooray!\n"
+     ]
+    }
+   ],
    "source": [
     "# ... and even this cell!\n",
     "\n",
@@ -227,14 +237,30 @@
     ":---:|---\n",
     "<kbd>Ctrl</kbd> + <kbd>Y</kbd> | Move the current cell up\n",
     "<kbd>Ctrl</kbd> + <kbd>E</kbd> | Move the current cell down\n",
+    "<kbd>U</kbd> | Undo a cell action\n",
     "\n",
     "Using these keystrokes as well as those for selecting adjacent cells, move the cells below into the order listed by the cells in order to complete the exercise. Select and run these blocks using the shortucts you learned in exercise 10. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "593f6dd6-3400-448a-86ed-a398b00d1f7b",
+   "execution_count": 9,
+   "id": "e7277200-b8e4-4d17-9b00-c6437fcb5a98",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# This cell needs to be run second\n",
+    "\n",
+    "if first == True:\n",
+    "    second = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "8e4e3389-d98f-4d5f-aa88-7cfc1fff6457",
    "metadata": {
     "tags": []
    },
@@ -248,23 +274,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "bce56124-631f-419e-abf6-655c435a98a0",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# This cell needs to be run second\n",
-    "\n",
-    "if first == True:\n",
-    "    second == True"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "05d60bba-d58a-42b9-8f69-f31d1730ab97",
+   "execution_count": 11,
+   "id": "912331e5-e3ae-49f6-ac21-66f07ee8a1b6",
    "metadata": {
     "tags": []
    },
@@ -273,13 +284,13 @@
     "# This cell needs to be run third\n",
     "\n",
     "if second == True:\n",
-    "    third == True"
+    "    third = True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "6125135a-ef95-4877-b3aa-9f8a3e9479b3",
+   "execution_count": 19,
+   "id": "70b40221-95f7-40cc-b4b1-0dfa00a93127",
    "metadata": {
     "tags": []
    },
@@ -288,13 +299,13 @@
     "# This cell needs to be run fifth\n",
     "\n",
     "if fourth == True:\n",
-    "    fifth == True"
+    "    fifth = True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "b570ff31-ae07-4968-8761-73fe7eb9cb1f",
+   "execution_count": 6,
+   "id": "0e5a8bab-a277-48c5-ba46-b57b362de65f",
    "metadata": {
     "tags": []
    },
@@ -302,13 +313,17 @@
    "source": [
     "# This cell needs to be run first\n",
     "\n",
-    "first = True"
+    "first = True\n",
+    "second = False\n",
+    "third = False\n",
+    "fourth = False\n",
+    "fifth = False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "5a2219a5-246f-4ee4-95cd-86ee4f7ea3e7",
+   "execution_count": 21,
+   "id": "3ec560ef-e447-4bf2-81ae-82d29136ae4f",
    "metadata": {
     "tags": []
    },
@@ -317,7 +332,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Not quite :(\n"
+      "Hooray!\n"
      ]
     }
    ],
@@ -430,14 +445,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 34,
    "id": "958d8dac-fedf-4c15-bda6-09a77ee4d8bd",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "# This cell should run only once\n",
+    "# This cell should run first and only once\n",
     "\n",
     "x = 0\n",
     "first = True\n",
@@ -448,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 38,
    "id": "1ec81e11-e26f-47ac-b3ab-de065d1f7fed",
    "metadata": {
     "tags": []
@@ -462,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 40,
    "id": "df9ad056-d405-480d-804d-89c557f2dc91",
    "metadata": {
     "tags": []
@@ -472,12 +487,12 @@
     "# This cell needs to be run second\n",
     "\n",
     "if first == True:\n",
-    "    second == True"
+    "    second = True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 42,
    "id": "7c9efb8c-e70f-4919-82fc-74f6ebc77db3",
    "metadata": {
     "tags": []
@@ -492,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 41,
    "id": "09985289-11c9-4db3-9e17-a578d31ba855",
    "metadata": {
     "tags": []
@@ -502,12 +517,12 @@
     "# This cell needs to be run third\n",
     "\n",
     "if second == True:\n",
-    "    third == True"
+    "    third = True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 43,
    "id": "512c50a5-3676-48df-833f-8b7bf8601f0f",
    "metadata": {
     "tags": []
@@ -517,15 +532,23 @@
     "# This cell needs to be run fifth\n",
     "\n",
     "if fourth == True:\n",
-    "    order == True"
+    "    order = True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "6400b409-2f54-428c-b34f-1a1338cc9508",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hooray!\n"
+     ]
+    }
+   ],
    "source": [
     "# This is the verification cell\n",
     "\n",
@@ -814,16 +837,16 @@
     "<kbd>Ctrl</kbd> + <kbd>J</kbd> | Select the cell below\n",
     "<kbd>Ctrl</kbd> + <kbd>Shift</kbd> + <kbd>K</kbd> | Extend selection to the cell above\n",
     "<kbd>Ctrl</kbd> + <kbd>Shift</kbd> + <kbd>J</kbd> | Extend selection to the cell below\n",
-    "<kbd>Ctrl</kbd> + <kbd>O</kbd> + <kbd>G</kbd> | Select the first cell in the Jupyter Notebook\n",
-    "<kbd>Ctrl</kbd> + <kbd>O</kbd> + <kbd>Ctrl</kbd> + <kbd>G</kbd> | Select the last cell in the Jupyter Notebook\n",
-    "<kbd>Ctrl</kbd> + <kbd>O</kbd> + <kbd>Z</kbd> + <kbd>Z</kbd> | Center the selected cell on the screen\n",
+    "<kbd>Ctrl</kbd> + <kbd>O</kbd> , <kbd>G</kbd> | Select the first cell in the Jupyter Notebook\n",
+    "<kbd>Ctrl</kbd> + <kbd>O</kbd> , <kbd>Ctrl</kbd> + <kbd>G</kbd> | Select the last cell in the Jupyter Notebook\n",
+    "<kbd>Ctrl</kbd> + <kbd>O</kbd> , <kbd>Z</kbd> + <kbd>Z</kbd> | Center the selected cell on the screen\n",
     "<kbd>Ctrl</kbd> + <kbd>Y</kbd> | Move the current cell up\n",
     "<kbd>Ctrl</kbd> + <kbd>E</kbd> | Move the current cell down\n",
-    "<kbd>Ctrl</kbd> + <kbd>O</kbd> + <kbd>Ctrl</kbd> + <kbd>O</kbd> | Insert a cell above\n",
-    "<kbd>Ctrl</kbd> + <kbd>O</kbd> + <kbd>O</kbd> | Insert a cell below\n",
-    "<kbd>Ctrl</kbd> + <kbd>O</kbd> + <kbd>Y</kbd> | Copy or 'yank' the currently selected cell onto your system clipboard\n",
-    "<kbd>Ctrl</kbd> + <kbd>O</kbd> + <kbd>D</kbd> | Cut or 'delete' the currently selected cell onto your system clipboard\n",
-    "<kbd>Ctrl</kbd> + <kbd>O</kbd> + <kbd>P</kbd> | Paste a cell from your system clipboard below the currently selected cell\n",
+    "<kbd>Ctrl</kbd> + <kbd>O</kbd> , <kbd>Ctrl</kbd> + <kbd>O</kbd> | Insert a cell above\n",
+    "<kbd>Ctrl</kbd> + <kbd>O</kbd> , <kbd>O</kbd> | Insert a cell below\n",
+    "<kbd>Ctrl</kbd> + <kbd>O</kbd> , <kbd>Y</kbd> | Copy or 'yank' the currently selected cell onto your system clipboard\n",
+    "<kbd>Ctrl</kbd> + <kbd>O</kbd> , <kbd>D</kbd> | Cut or 'delete' the currently selected cell onto your system clipboard\n",
+    "<kbd>Ctrl</kbd> + <kbd>O</kbd> , <kbd>P</kbd> | Paste a cell from your system clipboard below the currently selected cell\n",
     "<kbd>Ctrl</kbd> + <kbd>1</kbd> | Turn the cell into Code mode\n",
     "<kbd>Ctrl</kbd> + <kbd>2</kbd> | Turn the cell into Markdown mode\n",
     "<kbd>Ctrl</kbd> + <kbd>3</kbd> | Turn the cell into Raw mode\n",
@@ -855,7 +878,7 @@
     "\n",
     "### Vim Ex\n",
     "\n",
-    "Similar to Vim editor, it is possible to enter Ex mode from normal mode when editing a cell. To enter Ex mode, just input <kbd>:</kbd> and a prompt will appear. Right now though, the only features that are implemented in this JupyterLab extension are ```:w``` to save the notebook and ```:q``` to enter Jupyter command mode.\n",
+    "Similar to Vim editor, it is possible to enter Ex mode from normal mode when editing a cell. To enter Ex mode, just input <kbd>:</kbd> and a prompt will appear. Right now though, the only features that are documented for this JupyterLab extension are ```:w``` to save the notebook and ```:q``` to enter Jupyter command mode.\n",
     "\n",
     "### Clipboards for normal and Jupyter command\n",
     "\n",
