--- a/vim/01.00-vim_intro.ipynb
+++ b/vim/01.00-vim_intro.ipynb
@@ -62,7 +62,19 @@
    "source": [
     "## Insert Mode\n",
     "\n",
-    "For users who haven't seen Vim before, it's worth knowing one useful fact. If you want to edit the contents of a cell and not just move some lines around, you can enter into insert mode using <kbd>I</kbd> from normal mode. This will let you edit the text of a cell as usual."
+    "For users who haven't seen Vim before, it's worth knowing one useful fact. If you want to edit the contents of a cell and not just move some lines around, you can enter into insert mode using <kbd>I</kbd> from normal mode. This will let you edit the text of a cell as usual.\n",
+    "\n",
+    "## What Next\n",
+    "\n",
+    "We have two more tutorials to get through, so look through those other notebooks and start from exercise 1. Let's dive in!\n",
+    "\n",
+    "<img\n",
+    "     style=\"display: block;\n",
+    "            margin-left: auto;\n",
+    "            margin-right: auto;\n",
+    "            width: 30%;\"\n",
+    "     src=\"https://cdn.pixabay.com/animation/2022/09/28/13/22/13-22-18-1_512.gif\"\n",
+    "/>"
    ]
   }
  ],
