--- a/vim/01.02-vim_jupyter.ipynb
+++ b/vim/01.02-vim_jupyter.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "23e7106e-5951-4fd3-99f6-89e189a077ea",
    "metadata": {
     "tags": []
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "af23b29e-7a11-4f30-be4e-e883b50e4fe5",
    "metadata": {
     "tags": []
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "bfdefabf-92f0-4f29-a02c-d6dd5107d379",
    "metadata": {
     "tags": []
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "000468d9-8199-49ec-bb75-bf9de69e1f9a",
    "metadata": {
     "tags": []
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "a92dd894-8eb4-4a64-a311-8975887dc10d",
    "metadata": {
     "tags": []
@@ -119,26 +119,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "a765ca61-aa7a-4e5b-9c2e-d056190aa481",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hooray!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# This cell needs to be run last\n",
     "\n",
+    "from IPython.display import Image, display\n",
     "import vim_verifier as vv\n",
     "\n",
-    "vv.oneCon(fifth)"
+    "if vv.oneCon(fifth):\n",
+    "    display(Image(filename=\"gifs/birds.gif\"))"
    ]
   },
   {
@@ -160,50 +154,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "50fbb18d-67d4-4ec5-abb3-e24b44496961",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Select this cell ...\n",
     "\n",
-    "first = True"
+    "foo = True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "677de64a-a0ed-427c-9c59-29a7934b9d92",
    "metadata": {},
    "outputs": [],
    "source": [
     "# ... and this cell ...\n",
     "\n",
-    "second = True"
+    "bar = True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "1c0b4800-9eae-4ec9-9775-11a7e6b9319f",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hooray!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ... and even this cell!\n",
     "\n",
+    "from IPython.display import Image, display\n",
     "import vim_verifier as vv\n",
     "\n",
-    "vv.twoCon(first,second)"
+    "if vv.twoCon(foo,bar):\n",
+    "    display(Image(filename=\"gifs/brain.gif\"))"
    ]
   },
   {
@@ -246,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "e7277200-b8e4-4d17-9b00-c6437fcb5a98",
    "metadata": {
     "tags": []
@@ -261,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "8e4e3389-d98f-4d5f-aa88-7cfc1fff6457",
    "metadata": {
     "tags": []
@@ -276,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "912331e5-e3ae-49f6-ac21-66f07ee8a1b6",
    "metadata": {
     "tags": []
@@ -291,7 +281,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
+   "id": "28d08ad3-df0f-4255-8eb6-52b8b1092f5c",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# This cell needs to be run sixth\n",
+    "\n",
+    "if fifth == True:\n",
+    "    sixth = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "70b40221-95f7-40cc-b4b1-0dfa00a93127",
    "metadata": {
     "tags": []
@@ -306,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "0e5a8bab-a277-48c5-ba46-b57b362de65f",
    "metadata": {
     "tags": []
@@ -319,31 +324,26 @@
     "second = False\n",
     "third = False\n",
     "fourth = False\n",
-    "fifth = False"
+    "fifth = False\n",
+    "sixth = False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "cde2a8ed-6234-41b1-84e5-1f788a789666",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hooray!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# This cell needs to be run last\n",
     "\n",
+    "from IPython.display import Image, display\n",
     "import vim_verifier as vv\n",
     "\n",
-    "vv.oneCon(fifth)"
+    "if vv.oneCon(sixth):\n",
+    "    display(Image(filename=\"gifs/emoji.gif\"))"
    ]
   },
   {
@@ -377,26 +377,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "e33b3938-f2a5-47e9-97d2-1ef340974c8f",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hooray!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# This cell is the verifier\n",
     "\n",
+    "from IPython.display import Image, display\n",
     "import vim_verifier as vv\n",
     "\n",
-    "vv.exThirteen()"
+    "if vv.exThirteen():\n",
+    "    display(Image(filename=\"gifs/labeouf.gif\"))"
    ]
   },
   {
@@ -419,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "958d8dac-fedf-4c15-bda6-09a77ee4d8bd",
    "metadata": {
     "tags": []
@@ -437,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "1ec81e11-e26f-47ac-b3ab-de065d1f7fed",
    "metadata": {
     "tags": []
@@ -451,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "df9ad056-d405-480d-804d-89c557f2dc91",
    "metadata": {
     "tags": []
@@ -466,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "7c9efb8c-e70f-4919-82fc-74f6ebc77db3",
    "metadata": {
     "tags": []
@@ -481,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "09985289-11c9-4db3-9e17-a578d31ba855",
    "metadata": {
     "tags": []
@@ -496,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "512c50a5-3676-48df-833f-8b7bf8601f0f",
    "metadata": {
     "tags": []
@@ -511,26 +505,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "c825e994-5cc6-4cda-a944-37383a5b76f6",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hooray!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# This is the verification cell\n",
     "\n",
+    "from IPython.display import Image, display\n",
     "import vim_verifier as vv\n",
     "\n",
-    "vv.twoCon(x==4,order==True)"
+    "if vv.twoCon(x==4,order==True):\n",
+    "    display(Image(filename=\"gifs/minion.gif\"))"
    ]
   },
   {
@@ -729,26 +717,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "3c71c6c7-4a7e-44e4-a26b-7db02f0bcba3",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Boo!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# This is the verifier cell\n",
     "\n",
+    "from IPython.display import Image, display\n",
     "import vim_verifier as vv\n",
     "\n",
-    "vv.exFifteen()"
+    "if vv.exFifteen():\n",
+    "    display(Image(filename=\"gifs/norris.gif\"))"
    ]
   },
   {
@@ -759,6 +741,14 @@
     "## 16) Congratulations! You've completed all the exercises\n",
     "\n",
     "Now that you've finished the exercises, here are a few useful notes that you should keep in mind and, if you're interested, look into later. These topics are useful for navigating the extension, but they aren't strictly necessary for full functionality.\n",
+    "\n",
+    "<img\n",
+    "     style=\"display: block;\n",
+    "            margin-left: auto;\n",
+    "            margin-right: auto;\n",
+    "            width: 30%;\"\n",
+    "     src=\"https://cdn.dribbble.com/users/613331/screenshots/3007469/typewriter_v4.gif\"\n",
+    "/>\n",
     "\n",
     "### Table of Key Bindings\n",
     "\n",
