--- a/vim/01.01-vim_normal.ipynb
+++ b/vim/01.01-vim_normal.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "cd61af10-9bea-4c89-bf33-b486dffda15e",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "260f0da8-821c-463d-83a7-e7bdcd04b857",
    "metadata": {
     "tags": []
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "4d59597e-50b9-4f9a-a0fd-1d1b7fc4818a",
    "metadata": {
     "tags": []
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "bee1f6d0-8888-4965-be84-b7d44172fb67",
    "metadata": {
     "tags": []
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "89e02b30-8397-4cef-b32b-17060673afe8",
    "metadata": {
     "tags": []
@@ -98,26 +98,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "e688dba0-1d3f-4d6e-84ac-ea26f6d10904",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hooray!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# This cell needs to be run last\n",
     "\n",
+    "from IPython.display import Image, display\n",
     "import vim_verifier as vv\n",
     "\n",
-    "vv.oneCon(fifth)"
+    "if vv.oneCon(fifth):\n",
+    "    display(Image(filename=\"gifs/birds.gif\"))"
    ]
   },
   {
@@ -140,50 +134,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "50fbb18d-67d4-4ec5-abb3-e24b44496961",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Select this cell ...\n",
     "\n",
-    "first = True"
+    "foo = True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "677de64a-a0ed-427c-9c59-29a7934b9d92",
    "metadata": {},
    "outputs": [],
    "source": [
     "# ... and this cell ...\n",
     "\n",
-    "second = True"
+    "bar = True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "0d5c2b58-8c1b-456c-a9fc-376e4add7cd3",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hooray!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ... and even this cell!\n",
     "\n",
+    "from IPython.display import Image, display\n",
     "import vim_verifier as vv\n",
     "\n",
-    "vv.twoCon(first,second)"
+    "if vv.twoCon(foo,bar):\n",
+    "    display(Image(filename=\"gifs/brain.gif\"))"
    ]
   },
   {
@@ -224,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "2ea56c53-bc4d-491b-849a-ed9a9d1833e4",
    "metadata": {
     "tags": []
@@ -237,12 +225,13 @@
     "second = False\n",
     "third = False\n",
     "fourth = False\n",
-    "fifth = False"
+    "fifth = False\n",
+    "sixth = False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "593f6dd6-3400-448a-86ed-a398b00d1f7b",
    "metadata": {
     "tags": []
@@ -257,7 +246,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
+   "id": "28d08ad3-df0f-4255-8eb6-52b8b1092f5c",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# This cell needs to be run sixth\n",
+    "\n",
+    "if fifth == True:\n",
+    "    sixth = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "bce56124-631f-419e-abf6-655c435a98a0",
    "metadata": {
     "tags": []
@@ -272,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "05d60bba-d58a-42b9-8f69-f31d1730ab97",
    "metadata": {
     "tags": []
@@ -287,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "6125135a-ef95-4877-b3aa-9f8a3e9479b3",
    "metadata": {
     "tags": []
@@ -302,26 +306,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "cde2a8ed-6234-41b1-84e5-1f788a789666",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hooray!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# This cell needs to be run last\n",
     "\n",
+    "from IPython.display import Image, display\n",
     "import vim_verifier as vv\n",
     "\n",
-    "vv.oneCon(fifth)"
+    "if vv.oneCon(sixth):\n",
+    "    display(Image(filename=\"gifs/emoji.gif\"))"
    ]
   },
   {
@@ -355,26 +353,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "9fd5bb3b-34cd-4e41-a9e3-769773f57478",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hooray!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# This is the verification cell\n",
     "\n",
+    "from IPython.display import Image, display\n",
     "import vim_verifier as vv\n",
     "\n",
-    "vv.exFive()"
+    "if vv.exFive():\n",
+    "    display(Image(filename=\"gifs/labeouf.gif\"))"
    ]
   },
   {
@@ -397,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "958d8dac-fedf-4c15-bda6-09a77ee4d8bd",
    "metadata": {
     "tags": []
@@ -415,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "1ec81e11-e26f-47ac-b3ab-de065d1f7fed",
    "metadata": {
     "tags": []
@@ -429,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "df9ad056-d405-480d-804d-89c557f2dc91",
    "metadata": {
     "tags": []
@@ -444,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "7c9efb8c-e70f-4919-82fc-74f6ebc77db3",
    "metadata": {
     "tags": []
@@ -459,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "09985289-11c9-4db3-9e17-a578d31ba855",
    "metadata": {
     "tags": []
@@ -474,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "512c50a5-3676-48df-833f-8b7bf8601f0f",
    "metadata": {
     "tags": []
@@ -489,26 +481,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "c825e994-5cc6-4cda-a944-37383a5b76f6",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hooray!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# This is the verification cell\n",
     "\n",
+    "from IPython.display import Image, display\n",
     "import vim_verifier as vv\n",
     "\n",
-    "vv.twoCon(x==4,order==True)"
+    "if vv.twoCon(x==4,order==True):\n",
+    "    display(Image(filename=\"gifs/minion.gif\"))"
    ]
   },
   {
@@ -539,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "48d5f430-2605-4499-a33e-a19e4ee634b1",
    "metadata": {
     "tags": []
@@ -559,25 +545,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "352cb480-cf82-4733-ab21-3ea2e3eae6ec",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Boo!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# This cell is the verifier\n",
+    "\n",
+    "from IPython.display import Image, display\n",
     "import vim_verifier as vv\n",
     "\n",
-    "vv.exSeven()"
+    "if vv.exSeven():\n",
+    "    display(Image(filename=\"gifs/norris.gif\"))"
    ]
   },
   {
@@ -629,13 +610,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "merge = False\n",
-    "\n",
     "merge = mergeChecker()\n",
     "\n",
+    "from IPython.display import Image, display\n",
     "import vim_verifier as vv\n",
     "\n",
-    "vv.twoCon(split,merge)"
+    "if vv.twoCon(split,merge):\n",
+    "    display(Image(filename=\"gifs/simpsons.gif\"))"
    ]
   }
  ],
